--- a/TravelAid/Base.lproj/Main.storyboard
+++ b/TravelAid/Base.lproj/Main.storyboard
@@ -18,13 +18,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oEO-SC-PKM">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="qY5-4I-Ncv">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </webView>
+                                <subviews>
+                                    <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oEO-SC-PKM">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                        <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </webView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="667" id="pjZ-DE-rPl"/>
+                                    <constraint firstAttribute="width" constant="375" id="wmt-3C-XHG"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="qY5-4I-Ncv" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="088-Vk-Ovv"/>
+                            <constraint firstItem="qY5-4I-Ncv" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="F4s-E0-Vxw"/>
+                            <constraint firstItem="qY5-4I-Ncv" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="dpc-jf-Scz"/>
+                            <constraint firstItem="qY5-4I-Ncv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="yQL-jC-0ul"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
